fase13-ajustes-acessiblidade-bugs - correcoes