@@ -28,7 +28,7 @@ public abstract class NumberUtil
 	 */
 	public static final boolean isZeroOrNull(Integer valor)
 	{
-		if (valor != null && !valor.equals(new Integer(0)))
+		if (valor != null && !valor.equals(Integer.valueOf(0)))
 		{
 			return false;
 		}
@@ -59,31 +59,13 @@ public abstract class NumberUtil
 	 */
 	public static boolean equals(Integer valor1, Integer valor2)
 	{
-		Integer aux1 = isZeroOrNull(valor1) ? new Integer(0) : valor1;
-		Integer aux2 = isZeroOrNull(valor2) ? new Integer(0) : valor2;
+		Integer aux1 = isZeroOrNull(valor1) ? Integer.valueOf(0) : valor1;
+		Integer aux2 = isZeroOrNull(valor2) ? Integer.valueOf(0) : valor2;
 		if (aux1.equals(aux2))
 		{
 			return true;
 		}
 		return false;
-	}
-
-	/**
-	 * Retorna null caso o valor do Long seja zero ou null
-	 * 
-	 * @param valor
-	 * @return java.lang.Integer
-	 */
-	public static final Long getValorOrNull(Long valor)
-	{
-		if (valor != null && !valor.equals(new Long(0)))
-		{
-			return valor;
-		}
-		else
-		{
-			return null;
-		}
 	}
 
 	/**
@@ -94,7 +76,7 @@ public abstract class NumberUtil
 	 */
 	public static final boolean isZeroOrNull(Long valor)
 	{
-		if (valor != null && !valor.equals(new Long(0)))
+		if (valor != null && !valor.equals(Long.valueOf(0)))
 		{
 			return false;
 		}
@@ -125,31 +107,13 @@ public abstract class NumberUtil
 	 */
 	public static boolean equals(Long valor1, Long valor2)
 	{
-		Long aux1 = isZeroOrNull(valor1) ? new Long(0) : valor1;
-		Long aux2 = isZeroOrNull(valor2) ? new Long(0) : valor2;
+		Long aux1 = isZeroOrNull(valor1) ? Long.valueOf(0) : valor1;
+		Long aux2 = isZeroOrNull(valor2) ? Long.valueOf(0) : valor2;
 		if (aux1.equals(aux2))
 		{
 			return true;
 		}
 		return false;
-	}
-
-	/**
-	 * Retorna null caso o valor do Double seja zero ou null
-	 * 
-	 * @param valor
-	 * @return java.lang.Double
-	 */
-	public static final Double getValorOrNull(Double valor)
-	{
-		if (valor != null && !valor.equals(new Double(0.0)))
-		{
-			return valor;
-		}
-		else
-		{
-			return null;
-		}
 	}
 
 	/**
@@ -160,7 +124,7 @@ public abstract class NumberUtil
 	 */
 	public static final boolean isZeroOrNull(Double valor)
 	{
-		if (valor != null && !valor.equals(new Double(0.0)))
+		if (valor != null && !valor.equals(Double.valueOf(0.0)))
 		{
 			return false;
 		}
@@ -191,8 +155,8 @@ public abstract class NumberUtil
 	 */
 	public static final boolean equals(Double valor1, Double valor2)
 	{
-		Double aux1 = isZeroOrNull(valor1) ? new Double(0.0) : valor1;
-		Double aux2 = isZeroOrNull(valor2) ? new Double(0.0) : valor2;
+		Double aux1 = isZeroOrNull(valor1) ? Double.valueOf(0.0) : valor1;
+		Double aux2 = isZeroOrNull(valor2) ? Double.valueOf(0.0) : valor2;
 		if (aux1.equals(aux2))
 		{
 			return true;
